--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-vis": "^1.11.7",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5"
   },
   "scripts": {
