--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "^14.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
