--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
